# Lab4

./: CMakeLists.txt
src/: main.cpp
src/Applictaion/: App.cpp  App.hpp  Text.cpp  Text.hpp
